# c-unit-test-generator

./: .gitignore  CMakeLists.txt  README.md  generator.py  requirements.txt
output/tests/: calculator_test.cpp  calculator_test_refined.cpp
prompts/: fix_build.yaml  initial.yaml  refine.yaml
src/: calculator.cpp
